# ShiveWorks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mosquitto.conf  overseer.py  segmentsID.csv
PropertyControlFunctions/: GEN.py  Test.py  TestFunctions.f90
WaveSegment/.pio/libdeps/esp32dev/ESPNtpClient/: .piopm
WaveSegment/src/: NTP.cpp  NTP.h  main.cpp  mqtt.cpp  mqtt.h  sample_credentials.h
